# Obligatorio-IA-315078-275898

./: README.md
2048/: GameBoard.py  Main.ipynb  pyproject.toml
Cartpole/: cartpole_env.ipynb  pyproject.toml  run_experiments.ps1
Cartpole/experiments/: best_experiment.txt
Cartpole/experiments/A_5000_alpha0.01_gamma0.95_decay0.98_ep5000_seed0/: final_q.pkl  q_ep100.pkl  q_ep1000.pkl  q_ep1100.pkl  q_ep1200.pkl  q_ep1300.pkl  q_ep1400.pkl  q_ep1500.pkl  q_ep1600.pkl  q_ep1700.pkl  q_ep1800.pkl  q_ep1900.pkl  q_ep200.pkl  q_ep2000.pkl  q_ep2100.pkl  q_ep2200.pkl  q_ep2300.pkl  q_ep2400.pkl  q_ep2500.pkl  q_ep2600.pkl  q_ep2700.pkl  q_ep2800.pkl  q_ep2900.pkl  q_ep300.pkl  q_ep3000.pkl  q_ep3100.pkl  q_ep3200.pkl  q_ep3300.pkl  q_ep3400.pkl  q_ep3500.pkl  q_ep3600.pkl  q_ep3700.pkl  q_ep3800.pkl  q_ep3900.pkl  q_ep400.pkl  q_ep4000.pkl  q_ep4100.pkl  q_ep4200.pkl  q_ep4300.pkl  q_ep4400.pkl  (+11 more)
Cartpole/experiments/A_5000_alpha0.01_gamma0.95_decay0.995_ep5000_seed0/: final_q.pkl  q_ep100.pkl  q_ep1000.pkl  q_ep1100.pkl  q_ep1200.pkl  q_ep1300.pkl  q_ep1400.pkl  q_ep1500.pkl  q_ep1600.pkl  q_ep1700.pkl  q_ep1800.pkl  q_ep1900.pkl  q_ep200.pkl  q_ep2000.pkl  q_ep2100.pkl  q_ep2200.pkl  q_ep2300.pkl  q_ep2400.pkl  q_ep2500.pkl  q_ep2600.pkl  q_ep2700.pkl  q_ep2800.pkl  q_ep2900.pkl  q_ep300.pkl  q_ep3000.pkl  q_ep3100.pkl  q_ep3200.pkl  q_ep3300.pkl  q_ep3400.pkl  q_ep3500.pkl  q_ep3600.pkl  q_ep3700.pkl  q_ep3800.pkl  q_ep3900.pkl  q_ep400.pkl  q_ep4000.pkl  q_ep4100.pkl  q_ep4200.pkl  q_ep4300.pkl  q_ep4400.pkl  (+11 more)
(+1377 files in other folders)
