[tool.poetry]
name = "cartpole"
version = "0.1.0"
description = ""
authors = ["iturbideM <martiniturbidenoria@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
ipykernel = "^6.30.1"
pygame = "^2.6.1"
gymnasium = "^1.2.0"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
